--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png" alt="Image not found">
+                    <img src="images/work-1.jpg" alt="Image not found">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>The app connects you to the skilled prpfessional across the world.
-                            Downnload it for free from the Play Store.
+                        <h3>Live Weather Web App</h3>
+                        <p>The web app is made using API with 86% accuracy in information.
                         </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://aniketgupta01.github.io/Live-Weather-App/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
