--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <ul>
                             <li><span>Front End Web Develoment</span><br>HTML, CSS & JavaScript</li>
                             <li><span>Java Programming</span><br>Data Structures and Algorithms</li>
-                            <li><span>App Develoment</span><br>Building Android/iOS Apps</li>
+                            <li><span>React Develoment</span><br>Building React Apps</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -85,13 +85,13 @@
                 </div>
                 <div>
                     <i class="fa-solid fa-pen"></i>
-                    <h2>UI/UX Designer</h2>
+                    <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta deserunt autem sunt saepe. Deleniti numquam eaque illum hic atque delectus itaque dignissimos, recusandae temporibus minima!</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>App Design</h2>
+                    <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta deserunt autem sunt saepe. Deleniti numquam eaque illum hic atque delectus itaque dignissimos, recusandae temporibus minima!</p>
                     <a href="#">Learn More</a>
                 </div>
@@ -154,7 +154,7 @@
                         <a href="https://www.instagram.com/i__m_aniket__/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/resume.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images\AniketGupta_Resume.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
